# ovo-exporter

./: main.py  pyproject.toml
.github/workflows/: daily-export.yml
export/: export.py
fetch/: fetch.py
shared/: environment.py  reading.py  url_utils.py
